Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/AstroFuncDll.h

// Converts mean motion N to semi-major axis A.
double NToA(double n);
// Converts semi-major axis A to mean motion N.
double AToN(double a);
// Converts Kozai mean motion to Brouwer mean motion.
// SGP TLE's use Kozai mean motion while SGP4/SGP4-XP TLE's use Brouwer mean motion.
double KozaiToBrouwer(double eccen, double incli, double nKozai);
// Converts Brouwer mean motion to Kozai mean motion.
// SGP TLE's use Kozai mean motion while SGP4/SGP4-XP TLE's use Brouwer mean motion.
double BrouwerToKozai(double eccen, double incli, double nBrouwer);
// Converts a set of osculating Keplerian elements to a set of mean Keplerian elements using method 9 algorithm.
void KepOscToMean(double xa_OscKep[6], double xa_MeanKep[6]);
// Converts an ECI position vector XYZ to geodetic latitude, longitude, and height.
void XYZToLLH(double thetaG, double metricPos[3], double metricLLH[3]);
// Converts an ECI position vector XYZ to geodetic latitude, longitude, and height at the specified time.
void XYZToLLHTime(double ds50UTC, double metricPos[3], double metricLLH[3]);
// Converts geodetic latitude, longitude, and height to an ECI position vector XYZ.
void LLHToXYZ(double thetaG, double metricLLH[3], double metricXYZ[3]);
// Converts geodetic latitude, longitude, and height to an ECI position vector XYZ at the specified time.
void LLHToXYZTime(double ds50UTC, double metricLLH[3], double metricXYZ[3]);
// Converts EFG position and velocity vectors to ECI position and velocity vectors.
void EFGToECI(double thetaG, double posEFG[3], double velEFG[3], double posECI[3], double velECI[3]);
// Converts EFG position and velocity vectors to ECI position and velocity vectors at the specified time.
void EFGToECITime(double ds50UTC, double posEFG[3], double velEFG[3], double posECI[3], double velECI[3]);
// Converts ECI position and velocity vectors to EFG position and velocity vectors.
void ECIToEFG(double thetaG, double posECI[3], double velECI[3], double posEFG[3], double velEFG[3]);
// Converts ECI position and velocity vectors to EFG position and velocity vectors at the specified time.
void ECIToEFGTime(double ds50UTC, double posECI[3], double velECI[3], double posEFG[3], double velEFG[3]);
// Converts ECR position and velocity vectors to EFG position and velocity vectors.
void ECRToEFG(double polarX, double polarY, double posECR[3], double velECR[3], double posEFG[3], double velEFG[3]);
// Converts ECR position and velocity vectors to EFG position and velocity vectors at the specified time.
void ECRToEFGTime(double ds50UTC, double posECR[3], double velECR[3], double posEFG[3], double velEFG[3]);
// Converts EFG position and velocity vectors to ECR position and velocity vectors.
void EFGToECR(double polarX, double polarY, double posEFG[3], double velEFG[3], double posECR[3], double velECR[3]);
// Converts EFG position and velocity vectors to ECR position and velocity vectors at the specified time.
void EFGToECRTime(double ds50UTC, double posEFG[3], double velEFG[3], double posECR[3], double velECR[3]);
// Converts an EFG position vector to geodetic latitude, longitude, and height.
void EFGPosToLLH(double posEFG[3], double metricLLH[3]);
// Converts geodetic latitude, longitude, and height to an EFG position vector.
void LLHToEFGPos(double metricLLH[3], double posEFG[3]);
// Rotates position and velocity vectors from J2000 to coordinates of the specified date, expressed in ds50TAI.
void RotJ2KToDate(int spectr, int nutationTerms, double ds50TAI, double posJ2K[3], double velJ2K[3], double posDate[3], double velDate[3]);
// Rotates position and velocity vectors from coordinates of date to J2000.
void RotDateToJ2K(int spectr, int nutationTerms, double ds50TAI, double posDate[3], double velDate[3], double posJ2K[3], double velJ2K[3]);
// Computes the Sun and Moon position at the specified time.
void CompSunMoonPos(double ds50ET, double uvecSun[3], double* sunVecMag, double uvecMoon[3], double* moonVecMag);
// Computes the Sun position at the specified time.
void CompSunPos(double ds50ET, double uvecSun[3], double* sunVecMag);