Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Ada/DriverExamples/wrappers/astrofuncdll.ads


    -- Converts mean motion N to semi-major axis A.
    function NToA
        (n                 :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "NToA";

    -- Converts semi-major axis A to mean motion N.
    function AToN
        (a                 :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "AToN";

    -- Converts Kozai mean motion to Brouwer mean motion.
    -- SGP TLE's use Kozai mean motion while SGP4/SGP4-XP TLE's use Brouwer mean motion.
    function KozaiToBrouwer
        (eccen             :         Long_Float;
        incli              :         Long_Float;
        nKozai             :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "KozaiToBrouwer";

    -- Converts Brouwer mean motion to Kozai mean motion.
    -- SGP TLE's use Kozai mean motion while SGP4/SGP4-XP TLE's use Brouwer mean motion.
    function BrouwerToKozai
        (eccen             :         Long_Float;
        incli              :         Long_Float;
        nBrouwer           :         Long_Float) return Long_Float
    with Import => True,
        Convention => C,
        External_Name => "BrouwerToKozai";

    -- Converts a set of osculating Keplerian elements to a set of mean Keplerian elements using method 9 algorithm.
    procedure KepOscToMean
        (xa_OscKep         : in      Double1D;
        xa_MeanKep         : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "KepOscToMean";
        --xa_OscKep          : Double1D  (1..6);
        --xa_MeanKep         : Double1D  (1..6);

    -- Converts an ECI position vector XYZ to geodetic latitude, longitude, and height.
    procedure XYZToLLH
        (thetaG            :         Long_Float;
        metricPos          : in      Double1D;
        metricLLH          : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "XYZToLLH";
        --metricPos          : Double1D  (1..3);
        --metricLLH          : Double1D  (1..3);

    -- Converts an ECI position vector XYZ to geodetic latitude, longitude, and height at the specified time.
    procedure XYZToLLHTime
        (ds50UTC           :         Long_Float;
        metricPos          : in      Double1D;
        metricLLH          : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "XYZToLLHTime";
        --metricPos          : Double1D  (1..3);
        --metricLLH          : Double1D  (1..3);

    -- Converts geodetic latitude, longitude, and height to an ECI position vector XYZ.
    procedure LLHToXYZ
        (thetaG            :         Long_Float;
        metricLLH          : in      Double1D;
        metricXYZ          : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "LLHToXYZ";
        --metricLLH          : Double1D  (1..3);
        --metricXYZ          : Double1D  (1..3);

    -- Converts geodetic latitude, longitude, and height to an ECI position vector XYZ at the specified time.
    procedure LLHToXYZTime
        (ds50UTC           :         Long_Float;
        metricLLH          : in      Double1D;
        metricXYZ          : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "LLHToXYZTime";
        --metricLLH          : Double1D  (1..3);
        --metricXYZ          : Double1D  (1..3);

    -- Converts EFG position and velocity vectors to ECI position and velocity vectors.
    procedure EFGToECI
        (thetaG            :         Long_Float;
        posEFG             : in      Double1D;
        velEFG             : in      Double1D;
        posECI             : out     Double1D;
        velECI             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EFGToECI";
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);
        --posECI             : Double1D  (1..3);
        --velECI             : Double1D  (1..3);

    -- Converts EFG position and velocity vectors to ECI position and velocity vectors at the specified time.
    procedure EFGToECITime
        (ds50UTC           :         Long_Float;
        posEFG             : in      Double1D;
        velEFG             : in      Double1D;
        posECI             : out     Double1D;
        velECI             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EFGToECITime";
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);
        --posECI             : Double1D  (1..3);
        --velECI             : Double1D  (1..3);

    -- Converts ECI position and velocity vectors to EFG position and velocity vectors.
    procedure ECIToEFG
        (thetaG            :         Long_Float;
        posECI             : in      Double1D;
        velECI             : in      Double1D;
        posEFG             : out     Double1D;
        velEFG             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "ECIToEFG";
        --posECI             : Double1D  (1..3);
        --velECI             : Double1D  (1..3);
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);

    -- Converts ECI position and velocity vectors to EFG position and velocity vectors at the specified time.
    procedure ECIToEFGTime
        (ds50UTC           :         Long_Float;
        posECI             : in      Double1D;
        velECI             : in      Double1D;
        posEFG             : out     Double1D;
        velEFG             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "ECIToEFGTime";
        --posECI             : Double1D  (1..3);
        --velECI             : Double1D  (1..3);
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);

    -- Converts ECR position and velocity vectors to EFG position and velocity vectors.
    procedure ECRToEFG
        (polarX            :         Long_Float;
        polarY             :         Long_Float;
        posECR             : in      Double1D;
        velECR             : in      Double1D;
        posEFG             : out     Double1D;
        velEFG             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "ECRToEFG";
        --posECR             : Double1D  (1..3);
        --velECR             : Double1D  (1..3);
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);

    -- Converts ECR position and velocity vectors to EFG position and velocity vectors at the specified time.
    procedure ECRToEFGTime
        (ds50UTC           :         Long_Float;
        posECR             : in      Double1D;
        velECR             : in      Double1D;
        posEFG             : out     Double1D;
        velEFG             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "ECRToEFGTime";
        --posECR             : Double1D  (1..3);
        --velECR             : Double1D  (1..3);
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);

    -- Converts EFG position and velocity vectors to ECR position and velocity vectors.
    procedure EFGToECR
        (polarX            :         Long_Float;
        polarY             :         Long_Float;
        posEFG             : in      Double1D;
        velEFG             : in      Double1D;
        posECR             : out     Double1D;
        velECR             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EFGToECR";
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);
        --posECR             : Double1D  (1..3);
        --velECR             : Double1D  (1..3);

    -- Converts EFG position and velocity vectors to ECR position and velocity vectors at the specified time.
    procedure EFGToECRTime
        (ds50UTC           :         Long_Float;
        posEFG             : in      Double1D;
        velEFG             : in      Double1D;
        posECR             : out     Double1D;
        velECR             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EFGToECRTime";
        --posEFG             : Double1D  (1..3);
        --velEFG             : Double1D  (1..3);
        --posECR             : Double1D  (1..3);
        --velECR             : Double1D  (1..3);

    -- Converts an EFG position vector to geodetic latitude, longitude, and height.
    procedure EFGPosToLLH
        (posEFG            : in      Double1D;
        metricLLH          : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "EFGPosToLLH";
        --posEFG             : Double1D  (1..3);
        --metricLLH          : Double1D  (1..3);

    -- Converts geodetic latitude, longitude, and height to an EFG position vector.
    procedure LLHToEFGPos
        (metricLLH         : in      Double1D;
        posEFG             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "LLHToEFGPos";
        --metricLLH          : Double1D  (1..3);
        --posEFG             : Double1D  (1..3);

    -- Rotates position and velocity vectors from J2000 to coordinates of the specified date, expressed in ds50TAI.
    procedure RotJ2KToDate
        (spectr            :         Integer;
        nutationTerms      :         Integer;
        ds50TAI            :         Long_Float;
        posJ2K             : in      Double1D;
        velJ2K             : in      Double1D;
        posDate            : out     Double1D;
        velDate            : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "RotJ2KToDate";
        --posJ2K             : Double1D  (1..3);
        --velJ2K             : Double1D  (1..3);
        --posDate            : Double1D  (1..3);
        --velDate            : Double1D  (1..3);

    -- Rotates position and velocity vectors from coordinates of date to J2000.
    procedure RotDateToJ2K
        (spectr            :         Integer;
        nutationTerms      :         Integer;
        ds50TAI            :         Long_Float;
        posDate            : in      Double1D;
        velDate            : in      Double1D;
        posJ2K             : out     Double1D;
        velJ2K             : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "RotDateToJ2K";
        --posDate            : Double1D  (1..3);
        --velDate            : Double1D  (1..3);
        --posJ2K             : Double1D  (1..3);
        --velJ2K             : Double1D  (1..3);

    -- Computes the Sun and Moon position at the specified time.
    procedure CompSunMoonPos
        (ds50ET            :         Long_Float;
        uvecSun            : out     Double1D;
        sunVecMag          : out     Long_Float;
        uvecMoon           : out     Double1D;
        moonVecMag         : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "CompSunMoonPos";
        --uvecSun            : Double1D  (1..3);
        --uvecMoon           : Double1D  (1..3);

    -- Computes the Sun position at the specified time.
    procedure CompSunPos
        (ds50ET            :         Long_Float;
        uvecSun            : out     Double1D;
        sunVecMag          : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "CompSunPos";
        --uvecSun            : Double1D  (1..3);
